# edimeli

./: .gitignore  README.md  edimeli.config.json  getGABC.py  pyproject.toml
docs/: README.md
input/marian-antiphons-simple/: metadata.json
input/marian-antiphons-solemn/: metadata.json
input/marian-hymns/: metadata.json
internal/templates/: bookpart_gtr_accomp.ly  bookpart_gtr_all.ly  bookpart_gtr_solo.ly  ed_melicorum_bookpart_1.ly  ed_melicorum_bookpart_2.ly  ed_melicorum_header.ly  ed_melicorum_paper.ly  ed_melicorum_title.ly  ed_melicorum_toc_preface.ly  layout_accomp.ly  layout_all.ly  layout_solo.ly
src/edimeli/: editor_melicus.py  incoha.py  praedica_maj.py  praedica_min.py  translate_accomp.py  translate_all.py  translate_solo.py  translate_voice.py  utils.py
src/edimeli/lectormelicus/: lector_melicus.py
src/edimeli/scholasticusmelicus/: scholasticus_melicus.py
src/edimeli/scriptormelicus/: scriptor_melicus.py
