[project]
name = "edimeli"
version = "0.1.1a11"
description = "EdiMeli is a music typesetting toolkit for musicians working with Gregorian notation (square notes)."
authors = [{ name = "RJ Salvador", email = "salvador.workshop@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{include = "edimeli", from = "src"}]
package-mode = false

[tool.poetry.scripts]
translate-voice = "src.edimeli.translate_voice:translate_voice"
translate-solo = "src.edimeli.translate_solo:translate_solo"
translate-accomp = "src.edimeli.translate_accomp:translate_accomp"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
