[project]
name = "edimeli"
version = "0.1.1"
description = "EdiMeli is a music typesetting toolkit for musicians working with Gregorian notation (square notes)."
authors = [{ name = "RJ Salvador", email = "salvador.workshop@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{include = "edimeli", from = "src"}]
package-mode = false

[tool.poetry.scripts]
translate-all = "src.edimeli.translate_all:translate_all"
translate-solo = "src.edimeli.translate_solo:translate_solo"
translate-accomp = "src.edimeli.translate_accomp:translate_accomp"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
